# DouglasPeucker

./: README.md
DouglasPeucker/: dp.py  input.txt  main.py  output.txt  readme.md
gmt211_2220674027/: README.md  main.py  pyproject.toml
gmt211_2220674027/dp/: dp.py  dp__init__ .py
gmt211_2220674027/gmt211_224523235.egg-info/: PKG-INFO  SOURCES.txt
