[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmt211_2220674027"
version = "0.0.1"
authors = [
  { name="Faik", email="faik@example.com" },
]
description = "GMT 211 - Douglas Peucker Çizgi Basitleştirme Kütüphanesi"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dp*"]